test #62: 알림 등록 관련 댓글 테스트 수정
- CommentServiceTest